# rust-xtask-base

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tmpl.md
.github/workflows/: basic-tests.yml  ci-tests.yml  tests.yml
crates/project-workflow/: Cargo.toml
crates/project-workflow/src/: main.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
crates/workflow/src/boilerplate/: LICENSE-APACHE  LICENSE-MIT
crates/xtask/: Cargo.toml
crates/xtask-base/: Cargo.toml
crates/xtask-base/src/: lib.rs  template.rs
crates/xtask-base/src/boilerplate/: bash-completions  workflow
crates/xtask-base/src/github/: actions.rs  workflows.rs
crates/xtask/src/: main.rs
