[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
xtask-base = { path = "packages/xtask-base" }

cargo_metadata = "0.18.1"
chrono = "0.4.19"
clap = { version = "4.0" }
clap_complete = "4.0"
duct = "0.13.6"
execute = "0.2.9"
handlebars = "4.2.1"
itertools = "0.11.0"
scopeguard = "1.2.0"
serde_json = "1.0.75"
